<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_decisionmaking</name>
  <version>0.0.0</version>
  <description>The rosneuro decision making package</description>

  <author email="gloria.beraldo@phd.unipd.it">Gloria Beraldo</author>
  <maintainer email="gloria.beraldo@phd.unipd.it">Gloria Beraldo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_data</depend>
  <depend>rosneuro_msgs</depend>
  <depend>message_generation</depend>
  <depend>eigen</depend>
  
  <exec_depend>message_runtime</exec_depend>

</package>
